@@ -92,23 +92,7 @@ fi
 
 
 # check whether to use included GNU regex library
-AC_ARG_ENABLE([gnu-regex],
-		[AS_HELP_STRING([--enable-gnu-regex],
-				[compile with included GNU regex library [default=no]])],
-		,
-		[enable_gnu_regex=no])
-
-# auto-enable included regex if necessary
-# FIXME: this may override a user choice
-AC_CHECK_FUNCS([regcomp], [], [enable_gnu_regex="yes"])
-
-if test "x$enable_gnu_regex" = "xyes" ; then
-	AC_DEFINE([USE_INCLUDED_REGEX], [1], [Define if included GNU regex code should be used.])
-	AC_DEFINE([HAVE_REGCOMP], [1], [Define if you have the 'regcomp' function.])
-	AM_CONDITIONAL([USE_INCLUDED_REGEX], true)
-else
-	AM_CONDITIONAL([USE_INCLUDED_REGEX], false)
-fi
+GEANY_CHECK_GNU_REGEX
 
 
 # check for mingw specific settings
